{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 1772,
  "lineage": "698c0a6b-77b2-dca3-bba4-54af70724ac2",
  "resources": [
    {
      "module": "module.BE_instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:security-group/sg-0c154a8fb93fb35a1",
            "description": "Venus BE Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c154a8fb93fb35a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f066704f4c59dd1e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Venus BE instance test",
            "name_prefix": "",
            "owner_id": "350358714376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Venus BE instance test"
            },
            "tags_all": {
              "Name": "Venus BE instance test"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.DB_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:security-group/sg-075842b8c605844c9",
            "description": "Venus DB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075842b8c605844c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c154a8fb93fb35a1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "Venus DB test",
            "name_prefix": "",
            "owner_id": "350358714376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Venus DB test"
            },
            "tags_all": {
              "Name": "Venus DB test"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.BE_instance_sg.aws_security_group.instance_sg",
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.FE_instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:security-group/sg-0e03d6dc6364ca224",
            "description": "Venus FE Instance Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e03d6dc6364ca224",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f066704f4c59dd1e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Venus FE instance test",
            "name_prefix": "",
            "owner_id": "350358714376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Venus FE instance test"
            },
            "tags_all": {
              "Name": "Venus FE instance test"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Venus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:loadbalancer/app/Venus-test-alb/c9572fb26e77dfe2",
            "arn_suffix": "app/Venus-test-alb/c9572fb26e77dfe2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Venus-test-alb-375779527.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:loadbalancer/app/Venus-test-alb/c9572fb26e77dfe2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Venus-test-alb",
            "security_groups": [
              "sg-0f066704f4c59dd1e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001f40aeb6e384ebd"
              },
              {
                "subnet_id": "subnet-0249a523aed814bfa"
              }
            ],
            "subnets": [
              "subnet-001f40aeb6e384ebd",
              "subnet-0249a523aed814bfa"
            ],
            "tags": {
              "Name": "Venus-test-alb"
            },
            "tags_all": {
              "Name": "Venus-test-alb"
            },
            "vpc_id": "vpc-041eab2b3b08146ef",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:listener/app/Venus-test-alb/c9572fb26e77dfe2/ddea86bb241606b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-be/6ec93a5ebf2225fb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:listener/app/Venus-test-alb/c9572fb26e77dfe2/ddea86bb241606b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:loadbalancer/app/Venus-test-alb/c9572fb26e77dfe2",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.venus_alb.aws_lb.Venus",
            "module.venus_alb.aws_lb_target_group.alb_tg_BE",
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:listener/app/Venus-test-alb/c9572fb26e77dfe2/3fdbc68597d1900c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-fe/1bd0af54bd71bcfd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:listener/app/Venus-test-alb/c9572fb26e77dfe2/3fdbc68597d1900c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:loadbalancer/app/Venus-test-alb/c9572fb26e77dfe2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.venus_alb.aws_lb.Venus",
            "module.venus_alb.aws_lb_target_group.alb_tg_FE",
            "module.venus_alb.module.alb_sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_BE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-be/6ec93a5ebf2225fb",
            "arn_suffix": "targetgroup/tf-alb-tg-be/6ec93a5ebf2225fb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-be/6ec93a5ebf2225fb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-alb-tg-be",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg_FE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-fe/1bd0af54bd71bcfd",
            "arn_suffix": "targetgroup/tf-alb-tg-fe/1bd0af54bd71bcfd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:350358714376:targetgroup/tf-alb-tg-fe/1bd0af54bd71bcfd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-alb-tg-fe",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.venus_alb.module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:security-group/sg-0f066704f4c59dd1e",
            "description": "Venus ALB sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f066704f4c59dd1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Venus ALB sg",
            "name_prefix": "",
            "owner_id": "350358714376",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Venus ALB sg"
            },
            "tags_all": {
              "Name": "Venus ALB sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:internet-gateway/igw-033b4f925182d6aff",
            "id": "igw-033b4f925182d6aff",
            "owner_id": "350358714376",
            "tags": {
              "Name": "bobby-test-gw"
            },
            "tags_all": {
              "Name": "bobby-test-gw"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:route-table/rtb-04357e36afe782e30",
            "id": "rtb-04357e36afe782e30",
            "owner_id": "350358714376",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "venus-db-private-route"
            },
            "tags_all": {
              "Name": "venus-db-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082d8e6e3d8a337e3",
            "route_table_id": "rtb-04357e36afe782e30",
            "subnet_id": "subnet-0e91b7643480d288d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dbprivate",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.db_subnets.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f88b860d44547de",
            "route_table_id": "rtb-04357e36afe782e30",
            "subnet_id": "subnet-03711fad8a7c68b2a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.dbprivate",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.db_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013a9651e30d5c6c1",
            "route_table_id": "rtb-09f96b9cf8973c527",
            "subnet_id": "subnet-078e2b0230ef275a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.natGateways.aws_nat_gateway.nat",
            "module.vpc.module.private_subnet_route_tables.aws_route_table.route_table",
            "module.vpc.module.private_subnets.aws_subnet.subnet",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a232ff611780ce54",
            "route_table_id": "rtb-0806d23c8fccc13c7",
            "subnet_id": "subnet-03146d35ae35c3141"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.natGateways.aws_nat_gateway.nat",
            "module.vpc.module.private_subnet_route_tables.aws_route_table.route_table",
            "module.vpc.module.private_subnets.aws_subnet.subnet",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaa82d3cdace4e00",
            "route_table_id": "rtb-0b2a1b6fe466f405d",
            "subnet_id": "subnet-0249a523aed814bfa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnet_route_table.aws_route_table.route_table",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a6199a159e049db",
            "route_table_id": "rtb-0b2a1b6fe466f405d",
            "subnet_id": "subnet-001f40aeb6e384ebd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnet_route_table.aws_route_table.route_table",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:vpc/vpc-041eab2b3b08146ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0faf174e8489916bc",
            "default_route_table_id": "rtb-028fa10dd93d228fe",
            "default_security_group_id": "sg-0b860ca355f0ef2a8",
            "dhcp_options_id": "dopt-09b9e16fdd83249db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-041eab2b3b08146ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028fa10dd93d228fe",
            "owner_id": "350358714376",
            "tags": {
              "Name": "bobby-test"
            },
            "tags_all": {
              "Name": "bobby-test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.db_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-0e91b7643480d288d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91b7643480d288d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-db-private-subnet-01"
            },
            "tags_all": {
              "Name": "venus-db-private-subnet-01"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.db_subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-03711fad8a7c68b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03711fad8a7c68b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-db-private-subnet-02"
            },
            "tags_all": {
              "Name": "venus-db-private-subnet-02"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natGateways[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e9ca118e348037",
            "domain": "vpc",
            "id": "eipalloc-079e9ca118e348037",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-52-60-94-157.ca-central-1.compute.amazonaws.com",
            "public_ip": "52.60.94.157",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natGateways[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e9ca118e348037",
            "connectivity_type": "public",
            "id": "nat-07b340e3084da2fac",
            "network_interface_id": "eni-0be172d0fd8a5088d",
            "private_ip": "10.0.0.84",
            "public_ip": "52.60.94.157",
            "subnet_id": "subnet-0249a523aed814bfa",
            "tags": {
              "Name": "venus-nat-1"
            },
            "tags_all": {
              "Name": "venus-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natGateways[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f4db3f46b67dd99",
            "domain": "vpc",
            "id": "eipalloc-02f4db3f46b67dd99",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-35-183-166-73.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.166.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natGateways[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f4db3f46b67dd99",
            "connectivity_type": "public",
            "id": "nat-0ced885c62b143a04",
            "network_interface_id": "eni-0e3da280ed4d2dfea",
            "private_ip": "10.0.10.76",
            "public_ip": "35.183.166.73",
            "subnet_id": "subnet-001f40aeb6e384ebd",
            "tags": {
              "Name": "venus-nat-2"
            },
            "tags_all": {
              "Name": "venus-nat-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private_subnet_route_tables[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:route-table/rtb-09f96b9cf8973c527",
            "id": "rtb-09f96b9cf8973c527",
            "owner_id": "350358714376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b340e3084da2fac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "venus-private-route-01"
            },
            "tags_all": {
              "Name": "venus-private-route-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.natGateways.aws_nat_gateway.nat",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private_subnet_route_tables[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:route-table/rtb-0806d23c8fccc13c7",
            "id": "rtb-0806d23c8fccc13c7",
            "owner_id": "350358714376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ced885c62b143a04",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "venus-private-route-02"
            },
            "tags_all": {
              "Name": "venus-private-route-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.module.natGateways.aws_eip.eip",
            "module.vpc.module.natGateways.aws_nat_gateway.nat",
            "module.vpc.module.public_subnets.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-078e2b0230ef275a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e2b0230ef275a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-private-subnet-01"
            },
            "tags_all": {
              "Name": "venus-private-subnet-01"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.private_subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-03146d35ae35c3141",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03146d35ae35c3141",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-private-subnet-02"
            },
            "tags_all": {
              "Name": "venus-private-subnet-02"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_subnet_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:route-table/rtb-0b2a1b6fe466f405d",
            "id": "rtb-0b2a1b6fe466f405d",
            "owner_id": "350358714376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033b4f925182d6aff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "venus-public-route"
            },
            "tags_all": {
              "Name": "venus-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-0249a523aed814bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0249a523aed814bfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-public-subnet-01"
            },
            "tags_all": {
              "Name": "venus-public-subnet-01"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.public_subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:350358714376:subnet/subnet-001f40aeb6e384ebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001f40aeb6e384ebd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "350358714376",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "venus-public-subnet-02"
            },
            "tags_all": {
              "Name": "venus-public-subnet-02"
            },
            "vpc_id": "vpc-041eab2b3b08146ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}